# mathscope

./: .gitignore  MANIFEST.in  flake.nix  manage.py  pyproject.toml  requirements.txt
context/: forms.py  models.py  urls.py  views.py
context/management/commands/: addconll.py  addgraph.py
context/migrations/: 0001_initial.py
context/templates/context/: about.html  base.html  index.html  navbar.html  search.html
mathoscope/: asgi.py  settings.py  urls.py  wsgi.py
static_root/context/css/: search.css
